# cafe-and-wifi-website

./: index.html  main.py  pyproject.toml  style.css
